--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vite": "^6.0.5"
   },
   "dependencies": {
+    "@fireworks-js/svelte": "^2.10.8",
     "@tailwindcss/vite": "^4.0.1",
     "tailwindcss": "^4.0.1"
   }
